# rust_scraper_project

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  es.json
migration/: Cargo.toml
migration/src/: lib.rs  m20240915_044114_unique_hash.rs  m20240915_070941_regen_column.rs  m20240926_000001_create_school_table.rs
src/: config.rs  extractors.rs  initializers.rs  lib.rs  main.rs
src/entities/: mod.rs  prelude.rs  school_data.rs
src/initializers/: schema.rs
