[package]
name = "rust_scraper_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures ="0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
scraper = "0.20.0"
rayon = "1.8"
tokio = { version = "1", features = ["full"] }
regex = "1.10.6"
serde_json = "1.0"
sea-orm = { version = "1.0.0-rc.5", features = [ "sqlx-postgres","runtime-tokio-native-tls", "macros" ] }
md-5 = "=0.10.6"
clap = { version = "4.5.17", features = ["derive","env"] }
sha2 = "0.10.8"
